--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -20,8 +20,8 @@ spec:
   - key: staging
   - key: production
   ingress:
-    domain: ""
-    externalDNS: false
+    domain: "jx.demo.com"
+    externalDS: false
     namespaceSubDomain: -jx.
     tls:
       email: ""
